tests/errors/sem.expected-constant.cast-type.or
main :: () -> void {
    x := int;
    5 as x;
};
